--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="container">
-    <form action="#" method="post">
+    <form action="https://dimtony.github.io/formailer/send-email" method="post">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
