--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Formailer | Anthony Dimojiaku | Contact Form Email Sender</title>
   <style>
     body {
       font-family: Arial, sans-serif;
     }
 
+    .split{ 
+      height: 100%;
+      width: 50%;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      overflow-x: hidden;
+      padding-top: 20px;
+      
+    }
+
+    .first{
+      background-color: #00B2C8;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .inner-left{
+      position: absolute;
+      top:25vh;
+      width: 95%;
+      height: 45%;
+    }
+
+    .left {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
+      background-image: url(./IMG/pi.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+
+    }
+
+    .right {
+      right: 0;
+      background-color: #00B2C8;
+    }
+
     .container {
-      max-width: 400px;
+      max-width: 600px;
       margin: 0 auto;
       padding: 20px;
       border: 1px solid #ccc;
@@ -57,45 +101,53 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <form action="https://formailer.onrender.com/send-email" method="post">
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-      </div>
-
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-
-      <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="service">Email Service Provider (e.g. Gmail, Yahoo, AOL):</label>
-        <input type="text" id="service" name="service" required>
-      </div>
-
-      <div class="form-group">
-        <label for="sender">Sender's Email Address:</label>
-        <input type="email" id="sender" name="sender" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Sender's Email Password:</label>
-        <input type="password" id="pass" name="pass" required>
-      </div>
-      <div class="form-group">
-        <label for="receiver">Receiver's Email Address:</label>
-        <input type="email" id="receiver" name="receiver" required>
-      </div>
-
-      <div class="form-group">
-        <input type="submit" value="Submit">
-      </div>
-    </form>
+  <div class="split first">
+    <div class="inner-left">
+      <div class="left"></div>
+    </div>
   </div>
+  <div class="split right">
+    <div class="container">
+      <form action="https://formailer.onrender.com/send-email" method="post">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+        </div>
+  
+        <div class="form-group">
+          <label for="service">Email Service Provider (e.g. Gmail, Yahoo, AOL):</label>
+          <input type="text" id="service" name="service" required>
+        </div>
+  
+        <div class="form-group">
+          <label for="sender">Sender's Email Address:</label>
+          <input type="email" id="sender" name="sender" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Sender's Email Password:</label>
+          <input type="password" id="pass" name="pass" required>
+        </div>
+        <div class="form-group">
+          <label for="receiver">Receiver's Email Address:</label>
+          <input type="email" id="receiver" name="receiver" required>
+        </div>
+  
+        <div class="form-group">
+          <input type="submit" value="Submit">
+        </div>
+      </form>
+    </div>
+  </div>
+  
 </body>
 </html>
