--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
   
         <div class="form-group">
-          <input type="submit" value="Submit">
+          <input style="background-color: #00B2C8;" type="submit" value="Submit">
         </div>
       </form>
     </div>
