--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       width: 100%;
       height: 100%;
       background-color: transparent;
-      background-image: url(./IMG/pi.png);
+      background-image: url(./IMG/PI.png);
       background-repeat: no-repeat;
       background-size: contain;
 
